[package]
name = "simple-actor"
version = "0.4.1"
edition = "2021"

authors = ["nanocryk"]
description = "Helper to write actor-based async code."
keywords = ["asynchronous", "actor"]
repository = "https://github.com/nanocryk/simple-actor"
license = "MIT"
documentation = "https://docs.rs/simple-actor"

[dependencies]
futures = { version = "0.3.21" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }